Persistent mode implemented, dialog layout changed to work properly on low resolution desktop, various bug fixes.

--- a/XOutput/XOutput.csproj
+++ b/XOutput/XOutput.csproj
@@ -100,6 +100,9 @@
     <Compile Include="XOut.Designer.cs">
       <DependentUpon>XOut.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ControllerOptions.resx">
+      <DependentUpon>ControllerOptions.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
